@@ -568,6 +568,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * With $wgCapitalLinks off, accept off-by-first-letter-case in 'go' match
 * Optional parameters for [[Special:Listusers]]
 * (bug 2832) [[Special:Listadmins]] redirects to [[Special:Listusers/sysop]]
+* (bug 785) Parser did not get out of <pre> with list elements
 
 === Caveats ===
 
